--- a/assignment/assignment-01/Q3_SOL/marshall.html
+++ b/assignment/assignment-01/Q3_SOL/marshall.html
@@ -6,6 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marshall emberton speaker</title>
 </head>
+<style>
+    .hiddenimg {
+        display: none;
+    }
+
+    .hiddentxt {
+        color: black;
+        font-weight: bold;
+        z-index:99;
+    }
+
+    .hiddentxt a {
+        color: black;
+        text-decoration: none;
+        z-index: 99;
+    }
+
+    .hiddentxt:hover ~ .hiddenimg {
+        display: block;
+        position: absolute;
+        z-index: 2
+    }
+</style>
 <body>
     <div style ="text-align :center">
 
@@ -21,10 +44,9 @@
         <ul>
             <li>엠버튼은 Marshall의 다방향 사운드의 독특한 형태인 트루 스테레오포닉을 사용합니다. 모든 장소가 스위트 스팟인 절대적인 360도 사운드를 경험하세요. </li>
             <li>한 번의 충전으로 20시간 이상의 재생 시간을 제공합니다. 콤팩트한 크기와 견고한 내구성으로 휴대가 편리합니다. 엠버튼은 빠르게 충전할 수 있으며 20분 충전으로 5시간의 재생 시간을 제공합니다.</li>
-            
-            <li>내구성이 뛰어난 실리콘 외관과 IPX7 방수 등급으로 오랜 시간 재생할 수 있는 콤팩트 휴대용 스피커입니다. <img src ="./img/water_proof_marshall.jpg" width = "450px" height = "250px"></li>
         </ul>
         </strong>
+        <p><span class="hiddentxt"><a href="./img/water_proof_marshall.jpg">내구성이 뛰어난 실리콘 외관과 IPX7 방수 등급으로 오랜 시간 재생할 수 있는 콤팩트 휴대용 스피커입니다.</a></span><span class="hiddenimg"><img src="./img/water_proof_marshall.jpg" width="450px" height="250px" /></span></p>
     </div>
 
     <div style ="text-align :center">
