--- a/assignment/portfolio/index.html
+++ b/assignment/portfolio/index.html
@@ -58,7 +58,7 @@
             <ul>
                 <li>
                     <a
-                        href="https://www.youtube.com/watch?v=5f2AFS6PgEs&ab_channel=%EC%98%A8%EC%8A%A4%ED%85%8C%EC%9D%B4%EC%A7%80ONSTAGE">
+                        href="https://www.youtube.com/watch?v=9gr2kaSBFRM&list=PLdW0_NSsHTziq6EJjalea6y0dYk7X9KmI&index=43&ab_channel=NerdConnection">
                         <figure>
                             <img class="photo photo1" src="assets/IMG/music.jpg" alt="music">
                             <figcaption>음악 감상을 좋아합니다. <br>다양한 장르를 좋아하지만 <br>최근에는 밴드사운드에 매력을 느껴 <br>인디밴드 음악을 많이 듣습니다.
