--- a/assignment/portfolio/index.html
+++ b/assignment/portfolio/index.html
@@ -58,7 +58,7 @@
             <ul>
                 <li>
                     <a
-                        href="https://www.youtube.com/watch?v=9gr2kaSBFRM&list=PLdW0_NSsHTziq6EJjalea6y0dYk7X9KmI&index=43&ab_channel=NerdConnection">
+                        href="https://www.youtube.com/watch?v=TwJNKOgwMcU&ab_channel=%EB%94%A9%EA%B3%A0%EB%AE%A4%EC%A7%81%2Fdingomusic">
                         <figure>
                             <img class="photo photo1" src="assets/IMG/music.jpg" alt="music">
                             <figcaption>음악 감상을 좋아합니다. <br>다양한 장르를 좋아하지만 <br>최근에는 밴드사운드에 매력을 느껴 <br>인디밴드 음악을 많이 듣습니다.
